fix: make the menu visible

--- a/css/index.css
+++ b/css/index.css
@@ -609,7 +609,7 @@ a {
       left: -100%;
       top: 5rem;
       flex-direction: column;
-      background-color: #fff;
+      background-color: #000;
       width: 100%;
       border-radius: 10px;
       text-align: center;
